# CodeInspector

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CodeInspector.pro  CodeInspector.qrc  README.md  ToAsm.pro  applicationui.cpp  ci.qrc  codeeditor.cpp  codeeditor.h  codeinspector.cpp  codeinspector.h  codeinspector.icns  codeinspector.rc  configdialog.ui  example.qrc  godboltagent.cpp  godboltagent.h  image.qrc  iosInfo.plist  library.cpp  library.h  libraryversion.cpp  libraryversion.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkreplyhelper.cpp  networkreplyhelper.h  outputwindow.cpp  outputwindow.h  qmldialog.cpp  qmldialog.h  quickwidgetapi.cpp  quickwidgetapi.h  scintillaconfig.cpp  scintillaconfig.h  (+5 more)
android/: AndroidManifest.xml
core/: CMakeLists.txt  CodeInspector.qrc  LLVMIRView.cpp  LLVMIRView.h  asmitem.hpp  asmlink.hpp  astoutput.cpp  astoutput.h  backendinterface.hpp  clangqueryoutput.cpp  clangqueryoutput.h  clangtidyoutput.cpp  clangtidyoutput.h  codeeditor.cpp  codeeditor.h  codeeditorpane.cpp  codeeditorpane.h  codeinspector.cpp  codeinspector.h  codeinspectorpane.cpp  codeinspectorpane.h  codeinspectortabwidget.cpp  codeinspectortabwidget.h  compilationtabwidget.cpp  compiler.hpp  compilerinfo.hpp  core.pri  core.pro  coreImage.qrc  example.qrc  gcctreertloutput.cpp  gcctreertloutput.h  godboltagent.cpp  godboltagent.h  includewhatyouuseoutput.cpp  includewhatyouuseoutput.h  language.hpp  lddoutput.cpp  lddoutput.h  library.cpp  (+33 more)
core/resource/: configurations  configurations.json
core/resource/example/analysis/: basic.asm
core/resource/example/assembly/: infiniteLoop.asm
core/resource/example/c/: Max_array.c  Sum_over_array.c
core/resource/example/c++/: Max_array.cpp  Max_array_(Optimized).cpp  Sum_over_array.cpp  Sum_over_array_(Optimized).cpp  default.cpp
core/resource/example/cpp/: maxarray.cpp  maxarrayopt.cpp  square.cpp  sumoverarray.cpp  sumoverarrayopt.cpp
core/resource/example/cpp_for_opencl/: default.clcpp
core/resource/example/cppx/: basic.cpp  default.cpp  interface.cpp
core/resource/example/cuda/: square.cu
core/resource/example/d/: Max_array.d  Sum_over_array.d  maxarrayopt.d  sumoverarrayopt.d
core/resource/example/fortran/: dot_product.f90
core/resource/example/go/: maxarray.go
core/resource/example/pascal/: maxArray.pas
core/resource/example/rust/: Sum_over_array.rs  Sum_over_array_(Optimized).rs  maxarray.rs  maxarrayopt.rs  sumoverarray.rs  sumoverarrayopt.rs
core/resource/example/swift/: maxArray.swift  square.swift  sumOverArray.swift
core/resource/example/zig/: Sum_over_array.zig
core/resource/lua/: builtin.lua
core/resource/sci/: langs.model.xml
core/resource/sci/themes/: Bespin.xml  Black board.xml  Choco.xml  Deep Black.xml  Default.xml  Dracula.xml  Girly.xml  Hello Kitty.xml  HotFudgeSundae.xml  Material-Dark.xml  Mono Industrial.xml  Monokai.xml  MossyLawn.xml  NauticalButNice.xml  Navajo.xml  Neon.xml  Obsidian.xml  Plastic Code Wrap.xml  Ruby Blue.xml  Solarized-light.xml  Solarized.xml  Twilight.xml  VS2015-Dark.xml  Vibrant Ink.xml  khaki.xml  vim Dark Blue.xml
desktop/: codeeditorpane.cpp  codeeditorpane.h  codeinspectorapp.cpp  codeinspectorapp.h  codeinspectorpane.cpp  codeinspectorpane.h  codeinspectortabwidget.cpp  codeinspectortabwidget.h  comboboxdelegate.cpp  comboboxdelegate.h  compilationtabwidget.cpp  compilationtabwidget.h  desktop.pro  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sessionwidget.cpp  sessionwidget.h  stdafx.h
desktop-qt/: CMakeLists.txt  CodeInspector.icns  CodeInspector.rc  codeeditorpane.cpp  codeeditorpane.h  codeinspectorapp.cpp  codeinspectorapp.h  codeinspectorpane.cpp  codeinspectorpane.h  codeinspectortabwidget.cpp  codeinspectortabwidget.h  comboboxdelegate.cpp  comboboxdelegate.h  compilationtabwidget.cpp  desktop-qt.pro  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sessionwidget.cpp  stdafx.h
desktop-qt/translations/: CodeInspector_zh_CN.ts
mobile/: image.qrc  iosInfo.plist  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mobile.pro  outputwindow.h  qml.qrc  quickwidgetapi.cpp  quickwidgetapi.h  stdafx.h
plugins/: CMakeLists.txt  plugins.pri  plugins.pro
plugins/options/ast/: CMakeLists.txt  ast.pro  astoutput.cpp  astplugin.cpp  astplugin.h
plugins/runners/: CMakeLists.txt  runners.pro
plugins/runners/rextester/: CMakeLists.txt  rextester.pro  rextesterplugin.cpp  rextesterplugin.h
plugins/runners/wandbox/: CMakeLists.txt  wandbox.pro  wandboxplugin.cpp  wandboxplugin.h
plugins/tools/: CMakeLists.txt  tools.pro
plugins/tools/clang_format/: CMakeLists.txt  clang_format.pro  clangformatplugin.cpp  clangformatplugin.h
plugins/tools/clang_query/: CMakeLists.txt  clang_query.pro  clangqueryoutput.cpp  clangqueryplugin.cpp  clangqueryplugin.h
plugins/tools/clangtidy/: CMakeLists.txt  clangtidy.pro  clangtidyplugin.cpp  clangtidyplugin.h
plugins/tools/include_waht_you_use/: include_waht_you_use.pro
plugins/tools/include_what_you_use/: CMakeLists.txt  include_what_you_use.pro  includewhatyouuseoutput.cpp  includewhatyouuseplugin.cpp  includewhatyouuseplugin.h
plugins/tools/ldd/: CMakeLists.txt  ldd.pro  lddoutput.cpp  lddplugin.cpp  lddplugin.h
plugins/tools/llvmmca/: CMakeLists.txt  llvmmachinecodeanalyzeroutput.cpp  llvmmca.pro  llvmmcaplugin.cpp  llvmmcaplugin.h
plugins/tools/osaca/: CMakeLists.txt  osaca.pro  osacaplugin.cpp  osacaplugin.h
plugins/tools/pahole/: CMakeLists.txt  pahole.pro  paholeoutput.cpp  paholeoutput.h  paholeplugin.cpp  paholeplugin.h
plugins/tools/psv_studio/: CMakeLists.txt  psv_studio.pro  psvstudioplugin.cpp  psvstudioplugin.h
plugins/tools/readelf/: CMakeLists.txt  readelf.pro  readelfoutput.cpp  readelfplugin.cpp  readelfplugin.h
plugins/tools/strings/: CMakeLists.txt  strings.pro  stringsplugin.cpp  stringsplugin.h
plugins/tools/x86to6502/: CMakeLists.txt  x86to6502.pro  x86to6502plugin.cpp  x86to6502plugin.h
resource/: configurations
server/: compiler_explorer.go  go.mod  go.sum  main.go  redis.go  (+4 more)
(+145 files in other folders)
