cmake_minimum_required(VERSION 3.15)
project(CodeInspector VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(clang_format)
add_subdirectory(clang_query)
add_subdirectory(clangtidy)
add_subdirectory(include_what_you_use)
add_subdirectory(ldd)
add_subdirectory(llvmmca)
add_subdirectory(osaca)
add_subdirectory(pahole)
add_subdirectory(psv_studio)
add_subdirectory(readelf)
add_subdirectory(strings)
add_subdirectory(x86to6502)